--- a/src/app/pages/keras-cls/keras-cls.component.html
+++ b/src/app/pages/keras-cls/keras-cls.component.html
@@ -6,21 +6,22 @@
         <div class="text-column">
           <h1>Keras Framework</h1>
           <p>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facere eligendi, minima delectus non
-            voluptatum nemo quia deserunt nihil omnis nisi totam voluptatem beatae repellat repellendus
-            minus nulla cumque. Saepe, consequuntur. Lorem ipsum dolor sit amet consectetur adipisicing
-            elit. Fugiat vero obcaecati consequuntur, debitis dolore ex rerum temporibus alias similique
-            officia odit necessitatibus dignissimos maxime quidem corrupti dolorum ab illum. Maiores!
+            Keras is an open-source deep learning framework written in Python that simplifies the creation and training
+            of neural networks. It serves as a high-level API for backends like TensorFlow, offering an intuitive and
+            modular design ideal for rapid prototyping. With built-in support for layers, optimizers, and loss
+            functions, Keras is widely used in both research and industry for developing machine learning models.
           </p>
           <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Qui cumque debitis laboriosam est
-            dicta aliquid quia exercitationem aperiam doloremque quaerat eos, consequatur numquam, vero
-            voluptatem? Similique ab distinctio iste labore!
+            One of Keras’s main advantages is its balance between ease of use and flexibility. It allows users to build
+            models quickly using a simple interface while also supporting more complex customizations when needed. Its
+            integration with TensorFlow provides powerful computational support, including GPU acceleration, making it
+            suitable for a variety of deep learning tasks.
           </p>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. At omnis quaerat ab sit laboriosam
-            architecto debitis maiores corporis obcaecati nobis? Dolor doloremque dicta recusandae labore at
-            excepturi, laboriosam minima rerum?
+            In computer vision, Keras is commonly used for applications such as image classification, object detection,
+            and segmentation. It includes ready-to-use convolutional layers and tools for image preprocessing and
+            augmentation. With access to pre-trained models like VGG or ResNet, Keras also supports transfer learning,
+            enabling efficient training even on small datasets.
           </p>
         </div>
         <div class="image-column">
@@ -40,13 +41,12 @@
           <h1>Keras Classification Results</h1>
           <h2>Simple Keras Classificator</h2>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum unde suscipit, maxime minima distinctio vel ex
-            quia voluptate inventore consequuntur reiciendis dolore, aliquam ipsa aspernatur iste itaque neque sequi
-            fuga?
-
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero quis magni ratione praesentium dolorum vel
-            quia odit quae cum, consequatur, pariatur voluptatem, numquam cumque. Reprehenderit deleniti in amet cumque
-            tempora.
+            The first Keras classification architecture is outlined below. It includes an input layer, followed by data
+            augmentation and preprocessing layers. The core of the model consists of several Conv2D layers grouped with
+            MaxPooling2D layers to progressively extract and downsample spatial features. The final layer is a Dense
+            layer with a single neuron and a sigmoid activation function, which outputs a probability for binary
+            classification. While softmax is more commonly used in multi-class computer vision tasks, sigmoid is
+            appropriate here due to the binary nature of the problem.
           </p>
           <div class="image-wrapper">
             <img src="assets/snippets/keras_architecture_snippet.svg" alt="YOLOv8 Classification Model Train Function">
@@ -105,12 +105,10 @@
           <h1>Keras Classification Results</h1>
           <h2>Crop + Keras Classificator</h2>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel explicabo error deserunt deleniti! Eos fuga
-            commodi, qui voluptatibus aspernatur, dolores pariatur natus eaque facilis assumenda accusantium, mollitia
-            molestiae? Ullam, temporibus!
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque voluptatum animi sit esse, laborum eveniet
-            error eligendi nostrum accusantium, maxime et impedit iure fugit voluptates officiis tempore saepe adipisci.
-            Blanditiis?
+            The second Keras classifier employs the same architecture as the first. However, in this case, the input
+            images are preprocessed using the segmentation model trained under a semi-supervised paradigm based on the
+            YOLO framework. This preprocessing step aims to remove background noise, allowing the classifier to focus
+            more effectively on the relevant object within each image.
           </p>
           <div class="image-wrapper">
             <img src="assets/images/keras/disc_background_transition.gif"
@@ -172,12 +170,14 @@
           <h1>Transfer Learning</h1>
           <h2>Extracting YOLO Backbone</h2>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel explicabo error deserunt deleniti!
-            Eos fuga commodi, qui voluptatibus aspernatur, dolores pariatur natus eaque facilis assumenda
-            accusantium, mollitia molestiae? Ullam, temporibus!
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque voluptatum animi sit esse,
-            laborum eveniet error eligendi nostrum accusantium, maxime et impedit iure fugit voluptates
-            officiis tempore saepe adipisci. Blanditiis?
+            To extract the YOLO backbone from the segmentation model, the architecture had to be manually converted into
+            a set of layers compatible with the Keras framework. This involved reimplementing the Conv, C2f, and SPPF
+            blocks (along with their subcomponents) and transferring the corresponding weights into Keras-compatible
+            format.
+          </p>
+          <p>
+            The table below presents the maximum and mean differences observed when passing a randomly generated tensor
+            through both the original YOLO backbone (implemented in PyTorch) and its Keras-based equivalent.
           </p>
           <div class="center-contents">
             <div class="table-wrapper">
@@ -219,12 +219,22 @@
           <h1>Keras Classification Results</h1>
           <h2>YOLO Backbone + Keras Classificator</h2>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel explicabo error deserunt deleniti! Eos fuga
-            commodi, qui voluptatibus aspernatur, dolores pariatur natus eaque facilis assumenda accusantium, mollitia
-            molestiae? Ullam, temporibus!
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque voluptatum animi sit esse, laborum eveniet
-            error eligendi nostrum accusantium, maxime et impedit iure fugit voluptates officiis tempore saepe adipisci.
-            Blanditiis?
+            The initial phase of training is conducted over 100 epochs with the backbone network entirely frozen,
+            allowing updates only to the classification head. This strategy aims to stabilize the feature extraction
+            layers while focusing learning on the final classification layers.
+          </p>
+          <p>
+            During this stage, the learning progression is relatively slow. Moreover, a noticeable and growing
+            divergence between the training and validation loss curves suggests the early onset of overfitting. This
+            indicates that the model is beginning to memorize the training data rather than generalize effectively to
+            unseen samples.
+          </p>
+          <p>
+            Such overfitting behavior is commonly observed in large and complex models. Due to their high capacity,
+            these models are capable of memorizing intricate details of the training dataset rather than learning to
+            generalize based on underlying patterns. This reinforces the importance of applying appropriate
+            regularization techniques and training strategies to mitigate overfitting and enhance generalization
+            performance.
           </p>
         </div>
 
@@ -280,23 +290,23 @@
         <div class="text-column">
           <h1>Keras Classification Results</h1>
           <h2>Fine Tunning</h2>
+
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel explicabo error deserunt deleniti!
-            Eos fuga commodi, qui voluptatibus aspernatur, dolores pariatur natus eaque facilis assumenda
-            accusantium, mollitia molestiae? Ullam, temporibus!
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque voluptatum animi sit esse,
-            laborum eveniet error eligendi nostrum accusantium, maxime et impedit iure fugit voluptates
-            officiis tempore saepe adipisci. Blanditiis?
-          <p>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nobis odit aliquid facere voluptatibus dolorum
-            ipsa numquam, consequuntur esse illum optio voluptatem, quos ducimus omnis culpa aperiam! Deserunt, dolor!
-            Voluptates, nesciunt.
+            Fine-tuning involves gradually unfreezing the final layers of a pretrained model to adapt it more
+            effectively to a target dataset. This approach allows the model to retain general feature representations
+            learned from large-scale datasets while adapting higher-level representations to the specific task.
           </p>
           <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dicta libero vel porro, nemo ab excepturi nisi
-            ratione quod quidem, dolores quia fugiat, dolor provident illo ducimus recusandae blanditiis voluptatibus
-            dolorem!
-
+            The original YOLO backbone consists of 10 layers, indexed from 0 to 9. In this experiment, layers were
+            unfrozen in groups of two. However, only the final two groups (i.e., the last four layers) were considered
+            for fine-tuning. This decision was made to preserve the benefits of transfer learning, as unfreezing
+            lower-level layers would compromise the general features learned during pretraining.
+          </p>
+          <p>
+            Despite these efforts, the model exhibited increased signs of overfitting, as the base configuration was
+            already prone to this issue. Further training exacerbated the effect. Nonetheless, performance improvements
+            were still observed, suggesting that carefully unfreezing upper layers and extending training can yield to
+            better results.
           </p>
 
           <div class="next-btn-div">
@@ -317,7 +327,8 @@
               <div class="zoom-reset-wrapper">
                 <p-button label="Reset Zoom" [rounded]="false" severity="secondary" (onClick)="resetZoomTfStages()" />
               </div>
-              <p-chart #clsStageChart type="line" [data]="currentStageChartData" [options]="stageChartOptions"></p-chart>
+              <p-chart #clsStageChart type="line" [data]="currentStageChartData"
+                [options]="stageChartOptions"></p-chart>
             </div>
             <div class="result-table">
               <p-table [value]="currentStageTableData" responsiveLayout="scroll">
