--- a/src/app/pages/gradcam/gradcam.component.scss
+++ b/src/app/pages/gradcam/gradcam.component.scss
@@ -50,3 +50,14 @@
 .next-btn-div {
     margin-top: 32px;
 }
+
+.zoom-wrapper {
+  overflow: hidden;
+  border-radius: 12px;   
+  position: relative;
+}
+
+.gradcam-grid-img {
+  transition: transform 0.5s ease;
+  will-change: transform;
+}
